# filingbase

./: pyproject.toml  requirements.txt
archive/parsers/: base.py  pdf.py
caches/: mistral_ocr_8e368521ddb45227e984144ddbf8fc85.json
src/loaders/: base.py  mistral.py
src/models/: documents.py
src/parsers/: base.py  pdf.py
