[project]
name = "filingbase"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datamule>=3.0.5",
    "fastapi>=0.127.0",
    "htmltabletomd>=1.0.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "markitdown>=0.1.4",
    "mistralai>=1.10.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "tabulate>=0.9.0",
    "uvicorn>=0.40.0",
]
